# FreeBSD-ports

./: .gitignore  GIDs  MOVED  UIDs  UPDATING  copy-pfsense-packages.sh
Mk/: bsd.php.mk  (+4 more)
misc/codex/files/: patch-cargo-crates_v8-146.4.0_.gn  patch-cargo-crates_v8-146.4.0_build.rs  patch-cargo-crates_v8-146.4.0_build_config_BUILD.gn  patch-cargo-crates_v8-146.4.0_build_config_BUILDCONFIG.gn  patch-cargo-crates_v8-146.4.0_build_config_c++_modules.gni  patch-cargo-crates_v8-146.4.0_build_config_clang_BUILD.gn  patch-cargo-crates_v8-146.4.0_build_config_compiler_BUILD.gn  patch-cargo-crates_v8-146.4.0_build_config_linux_BUILD.gn  patch-cargo-crates_v8-146.4.0_build_config_linux_pkg-config.py  patch-cargo-crates_v8-146.4.0_build_config_v8__target__cpu.gni  patch-cargo-crates_v8-146.4.0_build_detect__host__arch.py  patch-cargo-crates_v8-146.4.0_build_gn__run__binary.py  patch-cargo-crates_v8-146.4.0_build_linux_chrome.map  patch-cargo-crates_v8-146.4.0_build_linux_unbundle_libusb.gn  patch-cargo-crates_v8-146.4.0_build_toolchain_freebsd_BUILD.gn  patch-cargo-crates_v8-146.4.0_build_toolchain_gcc__solink__wrapper.py  patch-cargo-crates_v8-146.4.0_build_toolchain_gcc__toolchain.gni  patch-cargo-crates_v8-146.4.0_build_toolchain_sysroot.gni  patch-cargo-crates_v8-146.4.0_build_toolchain_toolchain.gni  patch-cargo-crates_v8-146.4.0_third__party_abseil-cpp_absl_base_config.h  patch-cargo-crates_v8-146.4.0_third__party_abseil-cpp_absl_base_internal_sysinfo.cc  patch-cargo-crates_v8-146.4.0_v8_BUILD.gn  patch-cargo-crates_v8-146.4.0_v8_include_v8config.h  patch-cargo-crates_v8-146.4.0_v8_src_api_api.cc  patch-cargo-crates_v8-146.4.0_v8_src_base_cpu.cc  patch-cargo-crates_v8-146.4.0_v8_src_base_platform_platform-freebsd.cc  patch-cargo-crates_v8-146.4.0_v8_src_base_platform_platform-posix.cc  patch-cargo-crates_v8-146.4.0_v8_src_diagnostics_perf-jit.cc  patch-cargo-crates_v8-146.4.0_v8_src_diagnostics_perf-jit.h
www/iridium/files/: patch-BUILD.gn  patch-base_BUILD.gn  patch-base_allocator_partition__allocator_partition__alloc.gni  patch-base_allocator_partition__allocator_src_partition__alloc_BUILD.gn  patch-base_threading_platform__thread.h  patch-base_trace__event_memory__dump__manager.cc  patch-build_config_clang_BUILD.gn  patch-build_config_compiler_BUILD.gn  patch-build_toolchain_gcc__toolchain.gni  patch-chrome_app_chrome__main__delegate.cc  patch-chrome_browser_BUILD.gn  patch-chrome_browser_about__flags.cc  patch-chrome_browser_background_glic_glic__status__icon.cc  patch-chrome_browser_browser__features.cc  patch-chrome_browser_browser__process__impl.cc  patch-chrome_browser_browser__process__impl.h  patch-chrome_browser_chrome__browser__interface__binders.cc  patch-chrome_browser_chrome__browser__interface__binders__webui.cc  patch-chrome_browser_chrome__browser__interface__binders__webui__parts__desktop.cc  patch-chrome_browser_chrome__browser__main.cc  patch-chrome_browser_chrome__browser__main__linux.cc  patch-chrome_browser_chrome__content__browser__client.cc  patch-chrome_browser_chrome__content__browser__client.h  patch-chrome_browser_chrome__content__browser__client__navigation__throttles.cc  patch-chrome_browser_component__updater_registration.cc  patch-chrome_browser_download_chrome__download__manager__delegate.cc  (+256 more)
(+5702 files in other folders)
