--- cargo-crates/v8-146.4.0/build/toolchain/sysroot.gni.orig	2026-03-28 03:05:39 UTC
+++ cargo-crates/v8-146.4.0/build/toolchain/sysroot.gni
@@ -8,7 +8,9 @@ declare_args() {
   # Move the argument here to avoid complex dependencies and dependency loop
   # as this is needed by files in both config and toolchain directories.
   use_sysroot =
+      !is_bsd && (
       current_cpu == "x86" || current_cpu == "x64" || current_cpu == "arm" ||
       current_cpu == "arm64" || current_cpu == "mipsel" ||
       current_cpu == "mips64el" || current_cpu == "riscv64"
+      )
 }
