--- chrome/browser/BUILD.gn.orig	2026-03-24 16:59:08 UTC
+++ chrome/browser/BUILD.gn
@@ -7100,6 +7100,13 @@ static_library("browser") {
           [ "//third_party/webrtc/modules/desktop_capture:pipewire_config" ]
     }
 
+    if (is_bsd) {
+      sources -= [
+        "metrics/bluetooth_metrics_provider.cc",
+        "metrics/bluetooth_metrics_provider.h",
+      ]
+    }
+
     if (use_dbus) {
       sources += [
         "dbus_memory_pressure_evaluator_linux.cc",
