--- services/network/public/cpp/BUILD.gn.orig	2026-03-24 16:59:08 UTC
+++ services/network/public/cpp/BUILD.gn
@@ -736,7 +736,7 @@ component("cpp_base") {
     sources += [ "transferable_directory_fuchsia.cc" ]
   }
 
-  if (is_linux) {
+  if (is_linux && !is_bsd) {
     sources += [
       "network_interface_change_listener_mojom_traits.cc",
       "network_interface_change_listener_mojom_traits.h",
